XpTransferSystem + Utils
Librarian level 3 required.
Shift right click a book and quil to bless.
Add xp to transfer in book.
Sign to confirm the xp into book.
Anyone can shift right click signed xp book to get the xp from it.

Alectriciti:
SmartEntity system added: Allows for location-based entities with custom logic

MathUtils added